--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<title>Document</title>
 </head>
 
-<h1>наташа обухова привет из богодухова</h1>
+<h1 id="htext">наташа обухова привет из богодухова</h>
+
+
 <body>
 
 	
