--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
 	<title>GitTest</title>
 </head>
 
+
+<header>
+
 <h1 id="htext">наташа обухова привет из богодухова</h>
 
+</header>
 
 <body>
 
+	<main>
+
+	<img id="img" src="img/photo_2024-08-14_01-40-34.jpg" alt="с пацыками">
 	
+
+</main>
+
+
 </body>
 </html>
