--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header>
 
-<h1 id="htext">наташа обухова привет из богодухова</h>
+<h1 id="htext">салам богодуховским пацанам</h>
 
 </header>
 
